Changed todolist shortcode table-layout CSS back to auto to prevent heading overlap

--- a/css/cleverness-to-do-list-frontend.css
+++ b/css/cleverness-to-do-list-frontend.css
@@ -59,6 +59,10 @@ table.todo-table thead tr .sorter-false {
 	width:        100%;
 }
 
+.todo-table.todolist {
+	table-layout: auto;
+}
+
 .ctdl-message {
 	padding: 0.5em;
 	margin: 0.5em;
